# study-assist

./: .editorconfig  .gitignore  .gitlab-ci.yml  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
algebra/: index.html
algebra/2023/: index.html
algebra/2024/: index.html
algebra/2025/: index.html
algebra/lalu/: index.html
analysis/: index.html
analysis/2023/: index.html
analysis/exam/: index.html
calculus/: index.html
chemistry/: index.html
contribute/: index.html
docs/: contribute.md  index.md  senior.md  test.md
docs/PracticalSkillsTutorial/: index.md
docs/algebra/: 2023.md  2024.md  2025.md  index.md
docs/analysis/: exam.md  index.md
docs/calculus/: index.md
docs/chemistry/: index.md
docs/lalu/: index.md
docs/other/: index.md
docs/physics/: index.md
docs/programming/: 2023_daily_problem.md  2024_daily_problem.md  faq.md  index.md  pointers.md  temp.md  temp2.md
docs/programming_lecture/: index.md
docs/stylesheets/: custom.css  neoteroi-mkdocs.css
lalu/: index.html
other/: index.html
physics/: index.html
programming/: index.html
programming/2023_daily_problem/: index.html
programming/2024_daily_problem/: index.html
programming/24fall/: index.html
programming/25fall/: index.html
programming/exam/: index.html
programming/faq/: index.html
programming/pointers/: index.html
programming/temp/: index.html
programming_lecture/: index.html
search/: search_index.json
senior/: index.html
test/: index.html
(+121 files in other folders)
